# Research_Assistant_Agentic_AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  _check_exc.py  api.py  app.py  docker-compose.yml  endpoints.txt  main.py  pyproject.toml  requirements.txt
config/: __init__.py  settings.py
frontend/: Dockerfile  README.md  package.json  pnpm-lock.yaml
frontend/app/: globals.css
frontend/components/: Results.tsx
frontend/components/home/: ConnectionCard.tsx  HeroSection.tsx  PipelineProgress.tsx  SessionDetailCard.tsx  SessionListCard.tsx  StatusCard.tsx
frontend/components/results/: AnalysisTab.tsx  ExportTab.tsx  InsightsTab.tsx  PaperCard.tsx  PapersTab.tsx  ResultTabs.tsx
frontend/components/search/: FormSection.tsx  SearchQueryPanel.tsx  SearchSidebar.tsx
frontend/hooks/: useResearchWorkspace.ts  useSearchForm.ts
frontend/lib/: api.ts  research.ts  types.ts
frontend/pages/: index.tsx
frontend/styles/: globals.css
send_to_nalla/: .gitignore  README.md  app.py
send_to_nalla/src/agents/: state.py
send_to_nalla/src/memory/: __init__.py
src/: __init__.py
src/agents/: __init__.py  research_agent.py  state.py
src/agents/nodes/: insight_generator.py  memory_node.py  query_parser.py  (+4 more)
src/api/: fastapi_app.py  job_manager.py
src/memory/: sqlite_memory.py  vector_memory.py
src/models/: __init__.py  llm_factory.py
src/retrieval/: __init__.py  arxiv_retriever.py  core_retriever.py  crossref_retriever.py  semantic_scholar.py  web_retriever.py
src/utils/: __init__.py  formatters.py  json_utils.py  ollama_utils.py
(+3 files in other folders)
